@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>Network connection setup</h1>
-<p>Current configured network: <pre id="network"></pre></p>
+<p>Current configured network: <div id="network"></div></p>
 <form action="/ap_set.html" method="POST">
 Networks: 
 <select id="networks">
